spade-tests/src/snapshots/spade_tests__linear_check__consuming_a_field_produces_an_error_when_consuming_whole_struct.snap
---
source: spade-tests/src/linear_check.rs
---
struct port A {
    x: &mut bool,
}

entity consumer(a: &mut bool) -> bool __builtin__

entity x(a: A) -> A {
    let _ = inst consumer(a.x);
    a
}


error: Use of consumed resource
  ┌─ testinput:9:5
  │
8 │     let _ = inst consumer(a.x);
  │                           --- Previously used here
9 │     a
  │     ^ Use of consumed resource


